turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:13: error: Unmatched closing brace '}' ignored here
}
^